--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
 </head>
 <body>
     <h2> Login:</h2>
-    <form id="loginForm">
-        Username: <input type="text" name="username"><br>
-        Password: <input type="password" name="password"><br>
-        <input type="submit" value="Login">
-    </form>
+    
+    
+    Username: <input type="text" id="username" name="username"><br>
+    Password: <input type="password" id="password" name="password"><br>
+    <button id="loginBtn" onclick="loginUser()">Login</button>
+
 
     <ul id="messages">
 
@@ -25,8 +26,11 @@
 <script>
 
 function loginUser() {
-    const form = document.getElementById('loginForm');
-    const formData = new FormData(form);
+    const username = document.getElementById('username').value;
+    const password = document.getElementById('password').value;
+    const formData = new FormData();
+    formData.append('username', username);
+    formData.append('password', password);
 
     fetch('login.php', {
         method: 'POST',
