--- a/index.html
+++ b/index.html
@@ -30,16 +30,14 @@
 function loginUser() {
     const username = document.getElementById('username').value;
     const password = document.getElementById('password').value;
-    const formData = new FormData();
-    formData.append('username', username);
-    formData.append('password', password);
+    data = {username: username, password: password};
 
     fetch('login.php', {
         method: 'POST',
         headers: {
             'Content-Type': 'application/json'
         },
-        body: JSON.stringify(Object.fromEntries(formData))
+        body: JSON.stringify(data)
 
     })
     .then(response => response.json())
