--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ function getUsers(){
         userResultsList.innerHTML = '';
         data.forEach(user => {
             const li = document.createElement('li');
-            li.textContent = `${user.name} (${user.email})`;
+            li.textContent = `${user.username} (${user.email})`;
             userResultsList.appendChild(li);
         });
     })
