--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+    <style>
+        input {
+            width: 90%;
+        }
+    </style>
 </head>
 <body>
     <h2> Login:</h2>
