--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
     Password: <input type="password" id="password" name="password"><br>
     <button id="loginBtn" onclick="loginUser()">Login</button>
 
+    <h2> Login 2: </h2>
+    Username: <input type="text" id="username2" name="username2"><br>
+    Password: <input type="password" id="password2" name="password2"><br>
+    <button id="loginBtn2" onclick="loginUser2()">Login 2</button>
+
     <h2 id="m" hidden> Messages:</h2>
 
     <ul id="messages">
@@ -77,6 +82,10 @@ function loginUser() {
             document.getElementById('f').hidden = false;
             document.getElementById('searchKey').hidden = false;
             document.getElementById('searchBtn').hidden = false;
+            document.getElementById('loginBtn2').hidden = true;
+            document.getElementById('username2').hidden = true;
+            document.getElementById('password2').hidden = true;
+            
 
         } else {
             const li = document.createElement('li');
@@ -118,6 +127,55 @@ function getUsers(){
 
 }
 
+function loginUser2() {
+    const username = document.getElementById('username2').value;
+    const password = document.getElementById('password2').value;
+    data = {username: username, password: password};
+
+    fetch('login2.php', {
+        method: 'POST',
+        headers: {
+            'Content-Type': 'application/json'
+        },
+        body: JSON.stringify(data)
+
+    })
+    .then(response => response.json())
+    .then(data => {
+        console.log(data);
+        const messagesList = document.getElementById('messages');
+        messagesList.innerHTML = '';
+        if(data.status === 'Logged in successfully') {
+            data.messages.forEach(msg => {
+                const li = document.createElement('li');
+                const sender = msg.sender;
+                const recipient = msg.recipient;
+                const message = msg.message;
+                li.textContent = `${sender} to ${recipient}: ${message}`;
+                messagesList.appendChild(li);
+            });
+            document.getElementById('username').hidden = true;
+            document.getElementById('password').hidden = true;
+            document.getElementById('loginBtn').hidden = true;
+            document.getElementById('username2').value = '';
+            document.getElementById('password2').value = '';
+            document.getElementById('logoutBtn').hidden = false;
+            document.getElementById('m').hidden = false;
+            document.getElementById('f').hidden = false;
+            document.getElementById('searchKey').hidden = false;
+            document.getElementById('searchBtn').hidden = false;
+        } else {
+            const li = document.createElement('li');
+            li.textContent = 'Login failed';
+            messagesList.appendChild(li);
+        }
+    })
+    .catch(error => {
+        console.error('Error:', error);
+    });
+}
+
+
 function logout() {
     
     document.getElementById('username').hidden = false;
@@ -130,6 +188,7 @@ function logout() {
     document.getElementById('searchKey').hidden = true;
     document.getElementById('searchBtn').hidden = true;
     document.getElementById('userResults').innerHTML = '';
+
 }
 
 
