--- a/index.html
+++ b/index.html
@@ -164,6 +164,10 @@ function loginUser2() {
             document.getElementById('f').hidden = false;
             document.getElementById('searchKey').hidden = false;
             document.getElementById('searchBtn').hidden = false;
+            document.getElementById('loginBtn2').hidden = true;
+            document.getElementById('username2').hidden = true;
+            document.getElementById('password2').hidden = true;
+            
         } else {
             const li = document.createElement('li');
             li.textContent = 'Login failed';
